# jni-c

./: CMakeLists.txt  readme.md
code/: com_sz_jvm_JavaThread.cpp  com_sz_jvm_NativeMethod.cpp
jni/: com_sz_jvm_JavaThread.h  com_sz_jvm_NativeMethod.h
